[gd_scene load_steps=20 format=2]

[ext_resource path="res://Human_Sprites/Enemies/Police_run.png" type="Texture" id=1]
[ext_resource path="res://Human_Sprites/Enemies/police_death.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=3]
[ext_resource path="res://Audio/hitmarker.mp3" type="AudioStream" id=6]

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 24, 48 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 24, 48 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 28, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 52, 0, 26, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 36, 48 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 247, 0, 19, 48 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "Death",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "Walk",
"speed": 9.0
} ]

[sub_resource type="CapsuleShape2D" id=1]
radius = 11.0
height = 30.0

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 13.5, 25.8125 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 19
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 16, -22 )
scale = Vector2( 1.56386, 1.61458 )
frames = SubResource( 6 )
animation = "Walk"
frame = 4
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 15, -7 )
shape = SubResource( 1 )

[node name="Floor_checker" type="RayCast2D" parent="."]
position = Vector2( -5, 5 )
enabled = true
cast_to = Vector2( 0, 30 )
collision_mask = 2

[node name="Floor_checker2" type="RayCast2D" parent="."]
position = Vector2( 34, 5 )
enabled = true
cast_to = Vector2( 0, 30 )
collision_mask = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -5.0

[node name="Sides_Checker" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sides_Checker"]
position = Vector2( 15, -8.1875 )
shape = SubResource( 13 )

[connection signal="body_entered" from="Sides_Checker" to="." method="_on_Sides_Checker_body_entered"]
